Created a very rough colour based blob tracker that tracks the buoy based on its Hue in HSV space.

--- a/Todo.txt
+++ b/Todo.txt
@@ -17,8 +17,7 @@ Create a simple tracker that just takes the centre of mass of orangish pixels.
     - Create variations that work with HSV, RGB and YUV colour spaces
     
     - Produce a debug window for the the tracker that highlights the tracked pixels
-    
-    - Optimise the tracker (look at producing an implementation in C)
+    - Optimise the tracker (look at producing an implementation in C) - Done - 31/12/09 (May need further optimisation for RoBoard)
 
 Write a script to evaluate the performance of a tracker algorithm against the ground truth
     - Give error per frame
