--- a/Todo.txt
+++ b/Todo.txt
@@ -26,13 +26,31 @@ Write a script to evaluate the performance of a tracker algorithm against the gr
     - Allow the error to be tracked over just a subset of the frames
     
 Create the control script for the submarine
-    - Allow it to be started for both the real submarine and the simulation
+    - Start both Player and the control script as a service when the computer starts using Upstart
+    - Allow it to be started for both the real submarine and the simulation - Done
+    - Create a seperate GUI front-end for debugging
+    
+Create a player driver that uses the roboard IO library to turn the AUV left and right using PWM
 
-To Intall Player/OpenCV we need
+On a new computer we need the packages
 
-libdc1394
-libunicap
-libucil
-libavformat
-libswscale
-libxine
+git
+cmake
+cmake-curses-gui
+libltdl-dev
+
+
+To Install Player/OpenCV we need
+
+libdc1394-22-dev
+libunicap2-dev
+libucil2-dev
+libavformat-dev
+libswscale-dev
+libxine-dev
+libgtk2.0-dev
+libgstreamer0.10-dev
+libv4l-dev
+gstreamer0.10-plugins-good <--- Lots of dependancies...
+gstreamer0.10-plugins-bad <--- Also a lot, seems to contain a required dependancy though
+gstreamer-tools
