--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,22 @@
+TODO
+====
+
+- Redo the GUI for the GroundTruthEntry program using Glade
+
+   
+Write a script to evaluate the performance of a tracker algorithm against the ground truth
+    - Give error per frame
+        - Square of position error. If the tracker gets visible/invisible wrong then give a fixed penalty of half the screen diagonal squared
+    - Total and average error over a number of frames
+    - Allow the error to be tracked over just a subset of the frames
+        
+Create a player driver that uses the roboard IO library to turn the AUV left and right using PWM
+
+Hook SubController up to the Position3D interface and use it to steer the submarine to the buoy
+
+DONE
+====
+
 Make a program for specifying the ground truth for buoy location (centre and radius)
     - Display frame and frame number - Done
     - go forwards and backwards - Done
@@ -11,26 +30,23 @@ Make a program for specifying the ground truth for buoy location (centre and rad
     - Use text box to set radius
     - Save and load ground truth to and from YAML file - Done
     - Lerp between key-frames - Done
-    - Redo the GUI for the program using Glade
-    
+
 Create a simple tracker that just takes the centre of mass of orangish pixels.
     - Create variations that work with HSV, RGB and YUV colour spaces
     
     - Produce a debug window for the the tracker that highlights the tracked pixels
     - Optimise the tracker (look at producing an implementation in C) - Done - 31/12/09 (May need further optimisation for RoBoard)
 
-Write a script to evaluate the performance of a tracker algorithm against the ground truth
-    - Give error per frame
-        - Square of position error. If the tracker gets visible/invisible wrong then give a fixed penalty of half the screen diagonal squared
-    - Total and average error over a number of frames
-    - Allow the error to be tracked over just a subset of the frames
-    
 Create the control script for the submarine
     - Start both Player and the control script as a service when the computer starts using Upstart
     - Allow it to be started for both the real submarine and the simulation - Done
     - Create a seperate GUI front-end for debugging
-    
-Create a player driver that uses the roboard IO library to turn the AUV left and right using PWM
+
+Give the SubController script a configuration file so it can more easily be used for different roles i.e. both Sim and real world - 1/2/10
+
+
+INSTALLATION
+============
 
 On a new computer we need the packages
 
