--- a/Todo.txt
+++ b/Todo.txt
@@ -3,6 +3,7 @@ TODO
 
 - Redo the GUI for the GroundTruthEntry program using Glade
 
+- Make it so that values can be optional in the config file
    
 Write a script to evaluate the performance of a tracker algorithm against the ground truth
     - Give error per frame
@@ -12,7 +13,7 @@ Write a script to evaluate the performance of a tracker algorithm against the gr
         
 Create a player driver that uses the roboard IO library to turn the AUV left and right using PWM
 
-Hook SubController up to the Position3D interface and use it to steer the submarine to the buoy
+
 
 DONE
 ====
@@ -42,7 +43,8 @@ Create the control script for the submarine
     - Allow it to be started for both the real submarine and the simulation - Done
     - Create a seperate GUI front-end for debugging
 
-Give the SubController script a configuration file so it can more easily be used for different roles i.e. both Sim and real world - 1/2/10
+- Give the SubController script a configuration file so it can more easily be used for different roles i.e. both Sim and real world - 1/2/10
+- Hook SubController up to the Position3D interface and use it to steer the submarine to the buoy - 1/2/10
 
 
 INSTALLATION
